--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0",
+    "next": "^16.1.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "resend": "^6.2.2",
     "sonner": "^2.0.7",
